--- a/package.json
+++ b/package.json
@@ -15,6 +15,8 @@
     "@remix-run/react": "^2.11.1",
     "clsx": "^2.1.1",
     "date-fns": "^4.1.0",
+    "framer": "^2.4.1",
+    "motion": "^12.7.4",
     "react": "^18.2.0",
     "react-dom": "^18.2.0"
   },
